# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
assets/: bullet.json  config.json  gun.json  keys.json  plane.json
assets/levels/: 1_spring.json  2_small.json
assets/schemas/: background_schema.json  bullet_schema.json  config_schema.json  gun_schema.json  keys_schema.json  level_schema.json  plane_schema.json
doc/: architecture.md  class_diagram_recipe.txt  game_class_diagram_recipe.txt  main_menu_sequence_diagram_recipe.txt  manual.md  menu_list_class_diagram_recipe.txt  requirements_specification.md  testing.md  work_hours.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
src/: config.py  constants.py  database_connection.py  drawing_surface.py  events.py  game.py  game_menus.py  game_objects.py  game_setup.py  game_stats.py  graphics.py  init_database.py  inputs.py  level_config.py  main.py  menu.py  menu_item.py  physics.py  plotter.py  screen.py  shapes.py  sprite.py  stats_dao.py  timing.py  user.py  user_dao.py
src/game/: game.py  game_objects.py  game_stats.py  inputs.py  physics.py  setup.py  shapes.py
src/graphics/: camera.py  drawing_surface.py  game_rendering.py  graphics.py  image.py  menu_rendering.py  plotter.py  results_rendering.py  screen.py  stats_rendering.py
src/menu/: input.py  menu_items.py  menu_list.py  menus.py  setup.py
src/tests/: camera_test.py  drawing_surface_test.py  game_inputs_test.py  game_objects_test.py  game_stats_test.py  game_test.py  graphics_test.py  menu_list_test.py  menu_test.py  physics_test.py  (+3 more)
(+15 files in other folders)
