[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Kalle Luopajärvi <kalle.luopajarvi@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
