[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Kalle Luopajärvi <kalle.luopajarvi@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.1"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"
pylint = "^2.7.4"
autopep8 = "^1.5.6"
pandas = "^1.1.5"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
